fix form and tooltip on mobile

--- a/client/src/modal/modal.scss
+++ b/client/src/modal/modal.scss
@@ -46,7 +46,7 @@
   content: '';
   display: block;
   height: 4px;
-  width: 30px;
+  width: 35px;
   position: absolute;
   background-color: $brown;
 }
