--- a/client/src/pages/Project/Additional/Additional.scss
+++ b/client/src/pages/Project/Additional/Additional.scss
@@ -18,4 +18,10 @@
   &__list {
     list-style: decimal;
   }
+
+  @media screen and (max-width: $desktop-width) {
+  .tooltip {
+    display: none;
+  }
+}
 }
